--- a/index.html
+++ b/index.html
@@ -142,8 +142,8 @@ application_url: https://forms.gle/eL3f4yytyTmdeEKM6
   <div class="volunteer pure-g">
     <div class="desc pure-u-1 pure-u-lg-14-24">
       <h1 class="msg">We're looking for mentors!</h1>
-      <a class="btn" href="https://forms.gle/SD2V1Q4Key71wEyFA"
-        >Click here to apply</a
+      <a class="btn" href="https://docs.google.com/forms/d/e/1FAIpQLScjnDAMj2afp95L0PtPGdIwVmb7ScuR5y26bjt4A93XU_jqyg/viewform"
+        >Leave us your email</a
       >
     </div>
     <div class="photo pure-u-1 pure-u-lg-10-24"></div>
